# prata-cpp-6th-edition

./: .gitignore  01_significant_digits_for_floating_point_types.cpp  02_pointer_to_array.cpp  03_cin_input_handling.cpp  04_my_set_symmetric_difference.cpp  LICENSE  README.md  cin_input_handling.cpp  meson.build  my_set_symmetric_difference.cpp  pointer_to_array.cpp  significant_digits_for_floating_point_types.cpp
chapter_02/: meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp
chapter_03/: Makefile  meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp
chapter_04/: meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp  task_08.cpp  task_09.cpp  task_10.cpp
chapter_05/: Makefile  meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp  task_08.cpp  task_09.cpp  task_10.cpp
chapter_06/: Makefile  meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp  task_08.cpp  task_09.cpp
chapter_07/: meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp  task_08.cpp  task_09.cpp  task_10.cpp
chapter_08/: meson.build  task_01.cpp  task_02.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp
