project('useful-stuff', 'cpp', default_options : ['cpp_std=c++11'])
executable('01_significant_digits_for_floating_point_types', '01_significant_digits_for_floating_point_types.cpp')
executable('02_pointer_to_array', '02_pointer_to_array.cpp')
executable('03_cin_input_handling', '03_cin_input_handling.cpp')
executable('04_my_set_symmetric_difference', '04_my_set_symmetric_difference.cpp')
