project('chapter_07', 'cpp', default_options : ['cpp_std=c++11'])
executable('task_01', 'task_01.cpp')
executable('task_02', 'task_02.cpp')
executable('task_03', 'task_03.cpp')
executable('task_04', 'task_04.cpp')
executable('task_05', 'task_05.cpp')
executable('task_06', 'task_06.cpp')
executable('task_07', 'task_07.cpp')
executable('task_08', 'task_08.cpp')
#executable('task_09', 'task_09.cpp')
#executable('task_10', 'task_10.cpp')
